# avatar-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: avatar.py  cli.py  constants.py  expiry.py
